--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
    },
    "homepage": "https://github.com/k510034208/ddd_practice#readme",
    "dependencies": {
+      "@types/express": "^4.17.11",
+      "body-parser": "^1.18.1",
       "express": "^4.15.4",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.32",
-      "body-parser": "^1.18.1"
+      "routing-controllers": "^0.9.0",
+      "typeorm": "0.2.32"
    },
    "devDependencies": {
+      "@types/body-parser": "^1.19.0",
       "@types/node": "^8.0.29",
       "ts-node": "3.3.0",
       "typescript": "3.3.3333"
