--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
    "main": "index.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "dev": "ts-node src/index.ts",
+      "dev:w": "ts-node-dev --respawn ./src/index.ts"
    },
    "repository": {
       "type": "git",
@@ -20,6 +22,8 @@
    "dependencies": {
       "@types/express": "^4.17.11",
       "body-parser": "^1.18.1",
+      "class-transformer": "^0.4.0",
+      "class-validator": "^0.13.1",
       "express": "^4.15.4",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
@@ -30,6 +34,7 @@
       "@types/body-parser": "^1.19.0",
       "@types/node": "^8.0.29",
       "ts-node": "3.3.0",
+      "ts-node-dev": "^1.1.6",
       "typescript": "3.3.3333"
    }
 }
